@@ -77,6 +77,8 @@ v4.2.13 (work-in-progress)
      * Rename StrView::data() to StrView::data_begin() to reduce likelihood of
        mistakes, since the method is not actually returning null-terminated data
        like std::string::data() does.
+     * Internal JSON writing utilities gets built-in support for values wrapped
+       in Optional or EncapsulatedValue.
      * ...
 
 v4.2.12 2026-01-05
